maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:31: error: illegal start of statement
            yield (x,y-1)
            ^ShortestPathMaze:34: error: illegal start of statement
             yield (x-1,y)
             ^ShortestPathMaze:37: error: illegal start of statement
            yield (x+1,y)
            ^ShortestPathMaze:40: error: illegal start of statement
            yield (x,y+1)
            ^